package fr.lui.neogames.models.employe;

public class Gerant extends Employe {

    public Gerant(String firstName, String lastName) {
        super(firstName, lastName);
    }

}
